# ChaiMacro

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  test.chai
include/: MacroEngine.h
src/: MacroEngine.cpp  main.cpp
